# bplot

./: README.md  pyproject.toml
src/bplot/: bplot.py
