[project]
name = "bplot"
version = "0.1.0"
description = "bplot can be used to plot binary data ouput from debuggers like gdb, mdb etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "numpy>=2.2.5",
    "plotext>=5.3.2",
]

[project.scripts]
bplot = "bplot.bplot:main"
